style what we do section

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -86,4 +86,19 @@ section {
  padding:20px;
  width:500px;
  background-color: #fce138;
+ border: solid 3px #024e76;
+}
+
+.intro {
+    text-align: center;
+}
+
+.intro h2{
+    font-size: 55px;
+    color: #024e76;
+    margin-bottom: 35px;
+    padding: 0 100px 20px 100px;
+    border-bottom: 3px solid;
+    border-color: #fce138;
+    display: inline-block
 }
